@@ -1,5 +1,11 @@
 2015-03-22 Riccardo Mottola <rm@gnu.org>
 
+	* Headers/Protocols/Preferences.h
+	* PCPrefController.m
+	Direct preferences method for setting and getting colors.
+
+2015-03-22 Riccardo Mottola <rm@gnu.org>
+
 	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
 	Convert CMYK to RGB before serializing.
 
